tests/baselines/reference/importedModuleClassNameClash.errors.txt
importedModuleClassNameClash.ts(3,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== importedModuleClassNameClash.ts (1 errors) ====
    import foo = m1;
     
    export module m1 { }
                  ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
     
    class foo { }
    